fixed scrollbar bug

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -344,7 +344,6 @@ body {
 		background-color: $text-color;
 	}
   &__container {
-    overflow-y: auto;
     width: 100%;
   }
 	&__close {
