--- a/src/scss/_popups.scss
+++ b/src/scss/_popups.scss
@@ -48,7 +48,6 @@
     padding-top: 35px;
 		margin-left: auto;
 		margin-right: auto;
-    overflow-y: auto;
 	}
 	.flex-wrap {
 		justify-content: space-between;
